--- a/index.html
+++ b/index.html
@@ -9,10 +9,28 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Plus Jakarta Sans', sans-serif; }
-    .glass { background: rgba(255, 255, 255, 0.8); backdrop-filter: blur(8px); }
+    body { font-family: 'Plus Jakarta Sans', sans-serif; overflow-x: hidden; }
+    .glass { background: rgba(255, 255, 255, 0.8); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); }
     .gradient-text { background: linear-gradient(135deg, #064e3b 0%, #f97316 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+    ::-webkit-scrollbar { width: 8px; }
+    ::-webkit-scrollbar-track { background: #f1f5f9; }
+    ::-webkit-scrollbar-thumb { background: #064e3b; border-radius: 10px; }
+    
+    /* Responsive font scaling for ultra-large text */
+    @media (max-width: 768px) {
+      .text-9xl { font-size: 4rem !important; }
+      .text-8xl { font-size: 3.5rem !important; }
+      .text-7xl { font-size: 2.5rem !important; }
+    }
   </style>
+  <script>
+    // Shim for process.env to prevent ReferenceErrors in browser
+    window.process = {
+      env: {
+        API_KEY: undefined // This will be handled by the environment or runner
+      }
+    };
+  </script>
 <script type="importmap">
 {
   "imports": {
@@ -27,5 +45,7 @@
 </head>
 <body class="bg-slate-50 text-slate-900">
   <div id="root"></div>
+  <!-- Entry point for the application -->
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
