--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     ::-webkit-scrollbar-track { background: #f1f5f9; }
     ::-webkit-scrollbar-thumb { background: #064e3b; border-radius: 10px; }
     
-    /* Responsive font scaling for ultra-large text */
     @media (max-width: 768px) {
       .text-9xl { font-size: 4rem !important; }
       .text-8xl { font-size: 3.5rem !important; }
@@ -24,20 +23,18 @@
     }
   </style>
   <script>
-    // Shim for process.env to prevent ReferenceErrors in browser
-    window.process = {
-      env: {
-        API_KEY: undefined // This will be handled by the environment or runner
-      }
-    };
+    // Safe shim for process.env that won't overwrite injected values
+    window.process = window.process || {};
+    window.process.env = window.process.env || {};
   </script>
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7"
   }
 }
@@ -45,7 +42,6 @@
 </head>
 <body class="bg-slate-50 text-slate-900">
   <div id="root"></div>
-  <!-- Entry point for the application -->
   <script type="module" src="./index.tsx"></script>
 </body>
 </html>
