feat: Enhance AI itinerary generation and error handling
Improves the AI's itinerary generation by providing more specific optimization rules and a refined system instruction. This includes clustering activities geographically, logical sequencing, and incorporating "Ghumakad Gems."

Additionally, refines error handling for API key issues and general AI sync failures, providing more user-friendly feedback. Introduces a new 'Social Feed' view and includes a 'Travel Pace' option in the planning form to further tailor itineraries.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
     }
   </style>
   <script>
-    // Safe shim for process.env that won't overwrite injected values
-    window.process = window.process || {};
-    window.process.env = window.process.env || {};
+    // Smart shim for process.env
+    // This ensures that the code 'process.env.API_KEY' doesn't throw a ReferenceError
+    // and correctly looks for injected keys from common build systems.
+    window.process = window.process || { env: {} };
+    // If the environment provided VITE_API_KEY but not API_KEY, bridge it
+    if (!window.process.env.API_KEY) {
+      window.process.env.API_KEY = window.process.env.VITE_API_KEY || "";
+    }
   </script>
 <script type="importmap">
 {
